--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,118 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~primeicons/primeicons.css';
+
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        width: 1160px;
+    }
+}
+
+//Navbar Style
+
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+
+.header {
+    background-color: #0c2261;
+    padding: 20px 0px 10px 0px;
+    border-top: 4px solid grey;
+    position: fixed;
+    top: 0px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 90px;
+    z-index: 102;
+}
+
+.my-navbar,
+.left-side-nav,
+.right-side-nav {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-right: 20px;
+}
+
+.my-navbar {
+    padding-left: 15px;
+}
+
+.left-side-nav {
+    justify-content: start;
+    vertical-align: bottom;
+}
+
+.right-side-nav {
+    justify-content: end;
+}
+
+.title-wrapper {
+    color: white;
+    font-weight: 600;
+    font-size: 25px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+button {
+    color: #fff;
+    background-color: #0c2261;
+    border: none !important;
+}
+
+.nofocus:focus {
+    outline: none;
+}
+
+.pi-search:before {
+    color: white;
+    font-weight: 800;
+    margin-left: 30px;
+
+}
+
+.pi-shopping-cart {
+    font-size: 30px;
+}
+
+.pi-amazon:before {
+    color: white;
+    font-size: 35px;
+
+
+}
+
+i.pi.pi-amazon {
+    margin-bottom: 10px;
+    font-size: 40px;
+}
+
+.form-control {
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 5px;
+
+}
+
+.bg-danger {
+    font-size: 10px;
+    position: fixed;
+}
