Product Card created

--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,1 +1,57 @@
-<p>products works!</p>
+<div class="card-top container-fluid">
+    <div class="container d-flex">
+        <div class="item">
+            <a>
+                <img src="assets/images/products.png" alt="">
+                <h6>All products</h6>
+            </a>
+        </div>
+        <div class="item">
+            <a>
+                <img src="assets/images/electronics.png" alt="">
+                <h6>Electronics</h6>
+            </a>
+        </div>
+        <div class="item">
+
+            <a>
+                <img src="assets/images/jewelry.png" alt="">
+                <h6>Jewelry</h6>
+            </a>
+        </div>
+        <div class="item">
+
+            <a>
+                <img src="assets/images/man.png" alt="">
+                <h6>Mens's Clothing</h6>
+            </a>
+        </div>
+
+        <div class="item">
+
+            <a>
+                <img src="assets/images/women.png" alt="">
+                <h6>Women's Clothing</h6>
+            </a>
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container iframe">
+    <div class="row">
+        <ng-container *ngFor="let item of productList">
+            <div class="card col-md-3">
+                <img src="{{item.image}}" alt="">
+                <h5 style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">
+                    {{item.title}}</h5>
+                <p style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">
+                    {{item.description}}</p>
+                <p><strong>Price:</strong> ${{item.price}}</p>
+                <button class="btn btn-primary">Add to cart</button>
+            </div>
+        </ng-container>
+
+    </div>
+</div>
