--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '~primeicons/primeicons.css';
 
 @media (min-width: 768px) {
@@ -17,6 +18,11 @@
     .container {
         width: 1160px;
     }
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 //Navbar Style
@@ -115,4 +121,57 @@ i.pi.pi-amazon {
 .bg-danger {
     font-size: 10px;
     position: fixed;
+}
+
+//Product Card Style
+
+.card-top {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background: #fff;
+    background-clip: border-box;
+    border-radius: .25rem;
+    margin-left: 20px;
+    margin-top: 80px;
+}
+
+img {
+    width: 50px;
+}
+
+.item {
+    margin: 50px 20px;
+    text-align: center;
+}
+
+.item a:hover {
+    color: #0c2261;
+}
+
+h6{
+    margin-top: 15px;
+}
+
+.card {
+    padding: 20px;
+    margin: 40px;
+}
+
+.card img {
+    width: 200px;
+    height: 200px;
+    margin-bottom: 15px;
+    transition: 0.3s ease-in-out;
+}
+
+.card img:hover {
+    transition: 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
+.btn-primary {  
+    background-color: #0c2261;  
 }
