--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,57 +1,50 @@
-<div class="card-top container-fluid">
-    <div class="container d-flex">
-        <div class="item">
-            <a>
-                <img src="assets/images/products.png" alt="">
-                <h6>All products</h6>
-            </a>
+<div class="card">
+    <p-dataView
+      #dv
+      [value]="products"
+      [paginator]="true"
+      [rows]="1"
+      filterBy="name"
+      [sortField]="sortField"
+      [sortOrder]="sortOrder"
+      layout="grid"
+    >
+      <ng-template pTemplate="header">
+        <div class="flex flex-column md:flex-row md:justify-content-between">
+          <p-dropdown
+            [options]="sortOptions"
+            [(ngModel)]="sortKey"
+            placeholder="Sort By Price"
+            (onChange)="onSortChange($event)"
+            styleClass="mb-2 md:mb-0"
+          ></p-dropdown>
         </div>
-        <div class="item">
-            <a>
-                <img src="assets/images/electronics.png" alt="">
-                <h6>Electronics</h6>
-            </a>
-        </div>
-        <div class="item">
+      </ng-template>
 
-            <a>
-                <img src="assets/images/jewelry.png" alt="">
-                <h6>Jewelry</h6>
-            </a>
-        </div>
-        <div class="item">
-
-            <a>
-                <img src="assets/images/man.png" alt="">
-                <h6>Mens's Clothing</h6>
-            </a>
-        </div>
-
-        <div class="item">
-
-            <a>
-                <img src="assets/images/women.png" alt="">
-                <h6>Women's Clothing</h6>
-            </a>
-        </div>
-
-    </div>
-
-</div>
-
-<div class="container iframe">
-    <div class="row">
-        <ng-container *ngFor="let item of productList">
-            <div class="card col-md-3">
-                <img src="{{item.image}}" alt="">
-                <h5 style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">
-                    {{item.title}}</h5>
-                <p style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">
-                    {{item.description}}</p>
-                <p><strong>Price:</strong> ${{item.price}}</p>
-                <button class="btn btn-primary">Add to cart</button>
+      <ng-template let-product pTemplate="gridItem">
+        <div *ngFor="let product of products" class="col-12 md:col-4">
+          <div class="product-grid-item card">
+            <div class="product-grid-item-top">
+              <div>
+                <i class="pi pi-tag product-category-icon"></i>
+                <span class="product-category">{{ product.category }}</span>
+              </div>
             </div>
-        </ng-container>
-
-    </div>
-</div>
+            <div class="product-grid-item-content">
+              <img src="{{ product.image }}" alt="" />
+              <h4> {{ product.title }}</h4>
+              <div class="product-name">{{ product.name }}</div>
+              <p>{{ product.description }}</p>
+            </div>
+            <div class="product-grid-item-bottom">
+              <span class="product-price">${{ product.price }}</span>
+              <p-button
+                icon="pi pi-shopping-cart"
+              ></p-button>
+            </div>
+          </div>
+        </div>
+      </ng-template>
+    </p-dataView>
+  </div>
+  
