--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,50 +1,35 @@
 <div class="card">
-    <p-dataView
-      #dv
-      [value]="products"
-      [paginator]="true"
-      [rows]="1"
-      filterBy="name"
-      [sortField]="sortField"
-      [sortOrder]="sortOrder"
-      layout="grid"
-    >
-      <ng-template pTemplate="header">
-        <div class="flex flex-column md:flex-row md:justify-content-between">
-          <p-dropdown
-            [options]="sortOptions"
-            [(ngModel)]="sortKey"
-            placeholder="Sort By Price"
-            (onChange)="onSortChange($event)"
-            styleClass="mb-2 md:mb-0"
-          ></p-dropdown>
-        </div>
-      </ng-template>
+  <p-dataView #dv [value]="products" [paginator]="true" [rows]="1" filterBy="name" [sortField]="sortField"
+    [sortOrder]="sortOrder" layout="grid">
+    <ng-template pTemplate="header">
+      <div class="flex flex-column md:flex-row md:justify-content-between">
+        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By Price"
+          (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
 
-      <ng-template let-product pTemplate="gridItem">
-        <div *ngFor="let product of products" class="col-12 md:col-4">
-          <div class="product-grid-item card">
-            <div class="product-grid-item-top">
-              <div>
-                <i class="pi pi-tag product-category-icon"></i>
-                <span class="product-category">{{ product.category }}</span>
+      </div>
+
+    </ng-template>
+
+    <ng-template let-product pTemplate="gridItem">
+      <div class="container">
+
+        <div class="row">
+          <ng-container *ngFor="let item of products">
+            <div class="card col-md-3">
+              <div class="product-grid-item-content">
+                <img src="{{item.image}}" alt="">
               </div>
+              <h6> <strong> {{item.title}} </strong> </h6>
+              <p>
+                {{item.description}}
+              </p>
+              <p><strong>Price:</strong> ${{item.price}}</p>
+              <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
             </div>
-            <div class="product-grid-item-content">
-              <img src="{{ product.image }}" alt="" />
-              <h4> {{ product.title }}</h4>
-              <div class="product-name">{{ product.name }}</div>
-              <p>{{ product.description }}</p>
-            </div>
-            <div class="product-grid-item-bottom">
-              <span class="product-price">${{ product.price }}</span>
-              <p-button
-                icon="pi pi-shopping-cart"
-              ></p-button>
-            </div>
-          </div>
+
+          </ng-container>
         </div>
-      </ng-template>
-    </p-dataView>
-  </div>
-  
+      </div>
+    </ng-template>
+  </p-dataView>
+</div>
