--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -1,72 +1,83 @@
-:host ::ng-deep {
-    .p-dropdown {
-        width: 14rem;
-        font-weight: normal;
-    }
+// Product Card Style
+:host ::ng-deep .p-dropdown {
+    width: 14.5rem;
+    border-width: 1px 0 1px 0;
+    padding: 1rem;
+    font-weight: 600;
 
-    .product-name {
-        font-size: 1.5rem;
-        font-weight: 700;
-    }
+.p-dropdown-trigger {
+    border: 1px solid grey;
+    background-color: rgb(170, 168, 168) !important;
+}
 
-    .product-description {
-        margin: 0 0 1rem 0;
-    }
+}
 
-    .product-category-icon {
-        vertical-align: middle;
-        margin-right: 0.5rem;
-    }
+.flex-column {
+    -ms-flex-direction: column!important;
+    flex-direction: column!important;
+    text-align: right;
+    height:5px;
+}
 
-    .product-category {
-        font-weight: 600;
-        vertical-align: middle;
-    }
 
-    .product-grid-item {
-        margin: 0.5em;
-        border: 1px solid #dee2e6;
-
-        .product-grid-item-top,
-        .product-grid-item-bottom {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        img {
-            margin: 2rem 0;
-            width: 100px;
-            height: 100px;
-        }
-
-        .product-grid-item-content {
-            text-align: center;
-        }
-
-        .product-price {
-            font-size: 1.2rem;
-            font-weight: 600;
-        }
-
-        h4,
-        p {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 100ch
-        }
-    }
+.card-top {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: .25rem;
 }
 
 .card {
-    padding: 2rem;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
-        0 1px 3px 0 rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    margin-bottom: 2rem;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 30px;
+    margin: 40px;
     margin-top: 100px;
+
+}
+
+
+.product-grid-item-content {
+    text-align: center;
+}
+
+.card img {
+    width: 100px;
+    height: 100px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    text-align: center;
+    transition: 0.3s ease-in-out;
+}
+
+.card img:hover {
+    transition: 0.3s ease-in-out;
+    transform: scale(1.1);
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #0c2261;
+    border-color: #0c2261;
+
+    &:hover {
+        background-color: #102869 !important;
+    }
+}
+
+h6,
+p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100ch
+}
+
+
+.p-paginator-page, .p-paginator-next, .p-paginator-last, .p-paginator-first, .p-paginator-prev, .p-paginator-current {
+ 
+    border: 1 px solid grey;
 }
