Updates on product category

--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -19,6 +19,16 @@
     height:5px;
 }
 
+.product-category-icon {
+    vertical-align: middle;
+    margin-right: 0.5rem;
+}
+
+.product-category {
+    font-weight: 600;
+    vertical-align: middle;
+}
+
 
 .card-top {
     position: relative;
@@ -74,10 +84,4 @@ p {
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 100ch
-}
-
-
-.p-paginator-page, .p-paginator-next, .p-paginator-last, .p-paginator-first, .p-paginator-prev, .p-paginator-current {
- 
-    border: 1 px solid grey;
 }
