--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="card">
-  <p-dataView #dv [value]="products" [paginator]="true" [rows]="1" filterBy="name" [sortField]="sortField"
-    [sortOrder]="sortOrder" layout="grid">
+  <p-dataView #dv [value]="products" [paginator]="true" [rows]="1" filterBy="name"
+    [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
     <ng-template pTemplate="header">
       <div class="flex flex-column md:flex-row md:justify-content-between">
         <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By Price"
@@ -14,9 +14,15 @@
       <div class="container">
 
         <div class="row">
+
           <ng-container *ngFor="let item of products">
             <div class="card col-md-3">
+
               <div class="product-grid-item-content">
+                <div>
+                  <i class="pi pi-tag product-category-icon"></i>
+                  <span class="product-category">{{ item.category }}</span>
+                </div>
                 <img src="{{item.image}}" alt="">
               </div>
               <h6> <strong> {{item.title}} </strong> </h6>
