--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -5,18 +5,18 @@
     padding: 1rem;
     font-weight: 600;
 
-.p-dropdown-trigger {
-    border: 1px solid grey;
-    background-color: rgb(170, 168, 168) !important;
-}
+    .p-dropdown-trigger {
+        border: 1px solid grey;
+        background-color: rgb(170, 168, 168) !important;
+    }
 
 }
 
 .flex-column {
-    -ms-flex-direction: column!important;
-    flex-direction: column!important;
+    -ms-flex-direction: column !important;
+    flex-direction: column !important;
     text-align: right;
-    height:5px;
+    height: 5px;
 }
 
 .product-category-icon {
@@ -30,22 +30,22 @@
 }
 
 
-.card-top {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: .25rem;
-}
+// .card-top {
+//     position: relative;
+//     display: flex;
+//     flex-direction: column;
+//     min-width: 0;
+//     word-wrap: break-word;
+//     background: #fff;
+//     background-clip: border-box;
+//     border: 1px solid rgba(0, 0, 0, 0.2);
+//     border-radius: .25rem;
+// }
 
 .card {
     padding: 30px;
     margin: 40px;
-    margin-top: 100px;
+    margin-top: 50px;
 
 }
 
@@ -84,4 +84,25 @@ p {
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 100ch
+}
+
+// Menu Style
+
+.card-top {
+    border: none;
+}
+
+.d-flex {
+    display: -ms-flexbox !important;
+    display: flex !important;
+    margin-top: 120px;
+}
+
+.item {
+    margin: 0px 15px;
+    text-align: center;
+}
+
+.pi-chevron-down:before {
+    font-size: 12px;
 }
