--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -20,7 +20,7 @@
                     <div>
                         <button class="nofocus" routerLink="cart">
                             <i class="pi pi-shopping-cart"></i>
-                            <div class="badge bg-danger">{{3}}</div>
+                            <div class="badge bg-danger">{{totalItem}}</div>
                         </button>
                     </div>
                 </span>
