--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="true">
+<ng-container *ngIf="products.length !=0">
     <div class="container">
         <div class="card-table">
             <div class="cart-product">
@@ -16,20 +16,28 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Iphone</td>
-                            <td>Some Image</td>
-                            <td>This is branded phone</td>
-                            <td>50000</td>
-                            <td>1</td>
-                            <td>50000</td>
+                        <tr *ngFor="let item of products; let i = index">
+                            <td>{{i+1}}</td>
+                            <td>{{item.title}}</td>
+                            <td><img style="width: 120px;" src="{{item.image}}" alt=""></td>
+                            <td style="width: 25%;">{{item.description}}</td>
+                            <th style="width: 12%;">{{item.price}}</th>
+                            <td style="width: 12%;">{{item.quantity}}</td>
+                            <td style="width: 12%;">{{item.total}}</td>
                             <td>
-                                <button class="btn btn-danger pi pi-trash"> </button>
+                                <button (click)="removeItem(item)" class="btn btn-danger pi pi-trash"> </button>
                             </td>
+                        </tr>
+                        <tr>
+                            <td colspan="4"></td>
+                            <td><button (click)="emptycart()" class="btn btn-danger">Empty Cart</button></td>
+                            <td><button routerLink="/products" class="btn btn-primary">Shop More</button></td>
+                            <td><button class="btn btn-success">Checkout</button></td>
+                            <td><strong>Total : ${{grandTotal}}</strong></td>
                         </tr>
                     </tbody>
                 </table>
+            
             </div>
         </div>
     </div>
@@ -38,18 +46,16 @@
 
 
 
-
-
-<ng-container *ngIf="false">
+<ng-container *ngIf="products.length ==0">
     <div class="container">
         <div class="card">
-            <h5 class="card-title"> My Cart</h5>
+            <!-- <h5 class="card-title"> My Cart</h5> -->
         </div>
         <div class="center">
             <img src="./assets/images/cart.jpg" alt="">
             <h4>Your Cart is empty</h4>
             <h6>Add item to it now</h6>
-            <button class="btn btn-primary"> Shop Now</button>
+            <button routerLink="/products" class="btn btn-primary">Shop Now</button>
         </div>
     </div>
 </ng-container>
