--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -10,7 +10,7 @@
                     Amazon
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control pi pi-search" placeholder="search products...">
+                    <input type="text" class="form-control pi pi-search" [(ngModel)]="searchTerm" (keyup)="search($event)" placeholder="search products...">
                 </div>
                 <span class="pi pi-search"></span>
 
