--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -40,7 +40,7 @@
 
         <div class="row">
 
-          <ng-container *ngFor="let item of products">
+          <ng-container *ngFor="let item of products | filter:searchKey:'title'">
             <div class="card col-md-3">
 
               <div class="product-grid-item-content">
