--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -30,10 +30,10 @@
     layout="grid">
     <ng-template pTemplate="header">
       <div class="flex flex-column md:flex-row md:justify-content-between">
-        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By Price"
+        <span class="instruction">* Sort by price first, then select category!</span>
+        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="sort by price..."
           (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
       </div>
-
     </ng-template>
 
     <ng-template let-product pTemplate="gridItem">
