--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -7,7 +7,7 @@
                         <tr>
                             <th>Sr.No</th>
                             <th>Product Name</th>
-                            <th>Product Image</th>
+                            <th>Image</th>
                             <th>Description</th>
                             <th>Price</th>
                             <th>Quantity</th>
@@ -17,15 +17,28 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of products; let i = index">
-                            <td>{{i+1}}</td>
-                            <td>{{item.title}}</td>
-                            <td><img style="width: 120px;" src="{{item.image}}" alt=""></td>
-                            <td style="width: 25%;">{{item.description}}</td>
-                            <th style="width: 12%;">{{item.price}}</th>
-                            <td style="width: 12%;">{{item.quantity}}</td>
-                            <td style="width: 12%;">{{item.total}}</td>
                             <td>
-                                <button (click)="removeItem(item)" class="btn btn-danger pi pi-trash"> </button>
+                                <h6>{{i+1}}</h6>
+                            </td>
+                            <td style="width: 25%;">
+                                <h6>{{item.title}}</h6>
+                            </td>
+                            <td><img style="width: 100px; height:100px; margin-top: 20px;" src="{{item.image}}" alt="">
+                            </td>
+                            <td style="width: 35%;">{{item.description}}</td>
+                            <th style="width: 18%;">
+                                <h6>{{item.price}}</h6>
+                            </th>
+                            <td style="width: 18%;">
+                                <h6>{{item.quantity}}</h6>
+                            </td>
+                            <td style="width: 12%;">
+                                <h6>{{item.quantity * item.price}}</h6>
+                            </td>
+                            <td>
+                                <h6>
+                                    <button (click)="removeItem(item)" class="btn btn-danger pi pi-trash"> </button>
+                                </h6>
                             </td>
                         </tr>
                         <tr>
@@ -37,7 +50,7 @@
                         </tr>
                     </tbody>
                 </table>
-            
+
             </div>
         </div>
     </div>
@@ -53,8 +66,8 @@
         </div>
         <div class="center">
             <img src="./assets/images/cart.jpg" alt="">
-            <h4>Your Cart is empty</h4>
-            <h6>Add item to it now</h6>
+            <h4>Your Cart is empty...</h4>
+            <h5>Add item to it now!</h5>
             <button routerLink="/products" class="btn btn-primary">Shop Now</button>
         </div>
     </div>
