--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -46,7 +46,7 @@
                             <td><button (click)="emptycart()" class="btn btn-danger">Empty Cart</button></td>
                             <td><button routerLink="/products" class="btn btn-primary">Shop More</button></td>
                             <td><button class="btn btn-success">Checkout</button></td>
-                            <td><strong>Total : ${{grandTotal}}</strong></td>
+                            <td><strong>Total : ${{grandTotal | number : '1.2-2'}}</strong></td>
                         </tr>
                     </tbody>
                 </table>
