--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -1,12 +1,5 @@
 // Product Card Style
 
-.flex-column {
-    -ms-flex-direction: column !important;
-    flex-direction: column !important;
-    text-align: left;
-    height: 5px;
-}
-
 .product-category-icon {
     vertical-align: middle;
     margin-right: 0.5rem;
@@ -24,9 +17,9 @@
 
 }
 
-div.row {
-    margin-top: 18rem;
-}
+// div.row {
+//     margin-top: 18rem;
+// }
 
 
 .product-grid-item-content {
@@ -81,7 +74,7 @@ p {
     border-radius: 4px;
     width: 56%;
     padding: 10px;
-    margin-left: 30px;
+    margin-left: 10px;
     margin-bottom: 15px;
     background-color: #fdefd6;
 }
@@ -114,6 +107,15 @@ p {
     font-weight: 600;
 }
 
+:host ::ng-deep .p-dataview-header {
+    display: inline-flex;
+    margin-left: 30px;
+}
+
+:host ::ng-deep .p-dataview-emptymessage {
+    margin-left: 35px;
+}
+
 :host::ng-deep {
 
     .p-paginator-page,
@@ -124,7 +126,6 @@ p {
         border: none;
         margin: 10px;
         color: grey;
-        margin-top: 9rem;
         margin-bottom: 40px;
     }
 }
@@ -135,7 +136,7 @@ p {
     padding: 1rem;
     font-weight: 600;
     margin-top: 13rem;
-    margin-right: 6rem;
+    margin-right: 9rem;
 
     .p-dropdown-trigger {
         border: 1px solid grey;
