Add product to the cart from filtered categories

--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -95,11 +95,12 @@ p {
     width: 100%;
     z-index: 102;
 
- h6{
-    margin-top: 20px;
-    margin-left: 40px;
-    font-weight: 600;
- }
+    h6 {
+        margin-top: 20px;
+        font-size: 15px;
+        margin-left: 40px;
+        font-weight: 600;
+    }
 }
 
 .item {
