--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,99 +1,105 @@
 //Navbar Style
 
 .container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .header {
-    background-color: #0c2261;
-    padding: 20px 0px 10px 0px;
-    border-top: 4px solid grey;
-    position: fixed;
-    top: 0px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    height: 90px;
-    z-index: 102;
+  background-color: #0c2261;
+  padding: 20px 0px 10px 0px;
+  border-top: 4px solid grey;
+  position: fixed;
+  top: 0px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 90px;
+  z-index: 102;
 }
 
 .my-navbar,
 .left-side-nav,
 .right-side-nav {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-    padding-right: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-right: 20px;
 }
 
 .my-navbar {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 
 .left-side-nav {
-    justify-content: start;
-    vertical-align: bottom;
+  justify-content: start;
+  vertical-align: bottom;
 }
 
 .right-side-nav {
-    justify-content: end;
+  justify-content: end;
 }
 
 .title-wrapper {
-    color: white;
-    font-weight: 600;
-    font-size: 25px;
-    margin-right: 20px;
-    margin-bottom: 5px;
+  color: white;
+  font-weight: 600;
+  font-size: 25px;
+  margin-right: 20px;
+  margin-bottom: 5px;
 }
 
 button {
-    color: #fff;
-    background-color: #0c2261;
-    border: none !important;
+  color: #fff;
+  background-color: #0c2261;
+  border: none !important;
 }
 
 .nofocus:focus {
-    outline: none;
+  outline: none;
 }
 
 .pi-search:before {
-    color: white;
-    font-weight: 800;
-    margin-left: 30px;
-
+  color: white;
+  font-weight: 800;
+  margin-left: 30px;
 }
 
 .pi-shopping-cart {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .pi-amazon:before {
-    color: white;
-    font-size: 35px;
-
-
+  color: white;
+  font-size: 35px;
 }
 
 i.pi.pi-amazon {
-    margin-bottom: 10px;
-    font-size: 40px;
+  margin-bottom: 10px;
+  font-size: 40px;
 }
 
 .form-control {
-    border-radius: 10px;
-    height:40px;
-    margin-left: 10px;
-    margin-top: 5px;
-    padding: 15px;
-
+  border-radius: 10px;
+  height: 40px;
+  margin-left: 10px;
+  margin-top: 5px;
+  padding: 15px;
 }
 
 .bg-danger {
-    font-size: 10px;
-    position: fixed;
+  font-size: 10px;
+  position: fixed;
+}
+
+a {
+  color: white;
+  padding-right: 30px;
+  font-weight: bold;
+}
+
+.right-side-nav .profile-info {
+  display: flex;
+  align-items: center;
 }
