Style user icon

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -17,17 +17,23 @@
 
             </div>
             <div class="right-side-nav">
+
+
                 <span class="profile-name p-d-flex">
                     <div class="profile-info">
-                        <a routerLink="user-auth">Login/Sign-up</a>
                         <button class="nofocus" routerLink="cart">
                             <i class="pi pi-shopping-cart"></i>
                             <div class="badge bg-danger">{{cartLength}}</div>
                         </button>
+
+                        <a routerLink="user-auth">
+                            <i class="pi pi-user"></i>
+                        </a>
+
                     </div>
                 </span>
             </div>
-            
+
 
         </div>
 
