Adding contact-us page

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -29,6 +29,9 @@
                         <a routerLink="user-auth">
                             <i class="pi pi-user"></i>
                         </a>
+                        <a routerLink="contact-us">
+                          CONTACT US
+                        </a>
 
                     </div>
                 </span>
