--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -97,6 +97,8 @@ a {
   padding-left: 40px;
   padding-right: 30px;
   font-weight: bold;
+  color: white;
+  text-decoration: none;
 }
 
 .right-side-nav .profile-info {
