--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,4 +1,4 @@
-//Navbar Style
+/* Navbar Style */
 
 .container {
   padding-right: 15px;
@@ -8,14 +8,12 @@
 }
 
 .header {
-  background-color: #0c2261;
   padding: 20px 0px 10px 0px;
   border-top: 4px solid grey;
   position: fixed;
   top: 0px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 90px;
   z-index: 102;
 }
 
@@ -52,7 +50,7 @@
 
 button {
   color: #fff;
-  background-color: #0c2261;
+  background-color: black;
   border: none !important;
 }
 
@@ -67,12 +65,12 @@ button {
 }
 
 .pi-shopping-cart {
-  font-size: 30px;
+  font-size: 35px;
 }
 
 .pi-amazon:before {
   color: white;
-  font-size: 35px;
+  font-size: 45px;
 }
 
 i.pi.pi-amazon {
@@ -94,8 +92,8 @@ i.pi.pi-amazon {
 }
 
 a {
-  padding-left: 40px;
-  padding-right: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
   font-weight: bold;
   color: white;
   text-decoration: none;
@@ -104,9 +102,27 @@ a {
 .right-side-nav .profile-info {
   display: flex;
   align-items: center;
+  font-size: 20px;
+}
+
+.pi-shopping-cart:before {
+  padding-left: 20px;
 }
 
 .pi-user:before {
   color: white;
-  font-size: 19px;
+  font-size: 25px;
+  padding-left: 20px;
 }
+
+/* Assuming .nofocus class removes the default button styles */
+
+/* Styles for the shopping cart button */
+button.nofocus {
+  background: none; /* Set background to none */
+  border: none; /* Remove border */
+  padding: 0; /* Remove padding */
+  cursor: pointer; /* Set cursor to pointer */
+}
+
+
