--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -15,5 +15,12 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.user-auth {
+  /* Set the background image URL */
+  background-image: url("https://img.freepik.com/premium-photo/cloud-technology-icon-smartphone_117856-2693.jpg");
+  background-size: cover; /* Ensures the background image covers the entire element */
+  width: 100%; /* Full width */
+  height: 100vh; /* Full height by default */
+}
 
 /* Rest of the styles remain the same */
