Fixed some style

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -8,6 +8,7 @@
 }
 
 .header {
+  background-color: #042036;
   padding: 20px 0px 10px 0px;
   border-top: 4px solid grey;
   position: fixed;
@@ -124,5 +125,3 @@ button.nofocus {
   padding: 0; /* Remove padding */
   cursor: pointer; /* Set cursor to pointer */
 }
-
-
