--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -17,7 +17,7 @@
 
 .user-auth {
   /* Set the background image URL */
-  background-image: url("https://img.freepik.com/premium-photo/cloud-technology-icon-smartphone_117856-2693.jpg");
+  background-color:  #042036;
   background-size: cover; /* Ensures the background image covers the entire element */
   width: 100%; /* Full width */
   height: 100vh; /* Full height by default */
