--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,3 +1,4 @@
+<div class="user-auth">
 <div class="card-top container-fluid">
   <div class="container d-flex">
     <div>
@@ -74,4 +75,5 @@
       </div>
     </ng-template>
   </p-dataView>
+</div>
 </div>
