--- a/src/app/user-auth/user-auth.component.css
+++ b/src/app/user-auth/user-auth.component.css
@@ -2,8 +2,13 @@
 .user-auth {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 200px;
+  /* align-items: center; */
   height: 80vh;
+  background-color: #042036;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
 
 .common-form {
@@ -30,7 +35,7 @@
   padding: 10px;
   border: none;
   border-radius: 3px;
-  background-color: #0c2261;
+  background-color: #042036;
   color: #fff;
   cursor: pointer;
 }
@@ -64,7 +69,8 @@
 
 h3 {
   padding-bottom: 30px;
-  color: #0c2261;
+  color: white;
+  font-weight: bold;
 }
 
 p {
